syntax = "proto3";

package calculator;

service CalculatorService {
  // unary API
  rpc Calculate (SumRequest) returns (SumResponse) {};
  rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {}
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  reserved 1;
  double result = 2;
}

message CalculateSum {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumRequest {
  CalculateSum sum = 1;
}

message SumResponse {
  int32 result = 1;
}

service PrimeNumberDecompositionService {
  // streaming API
  rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}